# The-AI-Engineer-Challenge

./: Accessing_GPT_4_1_nano_Like_a_Developer.ipynb  pyproject.toml  vercel.json
api/: app.py
frontend/: README.md  index.html  main.js  style.css
